// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#expand should expand irregular rhythm 1`] = `
Array [
  Object {
    "dur": 1440,
    "isRest": false,
    "next": 1440,
    "time": 0,
  },
  Object {
    "dur": 1440,
    "isRest": false,
    "next": 2880,
    "time": 1440,
  },
  Object {
    "dur": 1440,
    "isRest": false,
    "next": 4320,
    "time": 2880,
  },
  Object {
    "dur": 1440,
    "isRest": false,
    "next": 5760,
    "time": 4320,
  },
  Object {
    "dur": 1440,
    "isRest": false,
    "next": 7200,
    "time": 5760,
  },
  Object {
    "dur": 1440,
    "isRest": false,
    "next": 8640,
    "time": 7200,
  },
]
`;

exports[`#expand should expand late starter simple 1`] = `
Array [
  Object {
    "dur": 1440,
    "isRest": false,
    "midi": 69,
    "next": 5280,
    "note": "A3",
    "time": 3840,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 71,
    "next": 5760,
    "note": "B3",
    "time": 5280,
  },
  Object {
    "dur": 1440,
    "isRest": false,
    "midi": 69,
    "next": 7200,
    "note": "A3",
    "time": 5760,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 71,
    "next": 7680,
    "note": "B3",
    "time": 7200,
  },
]
`;

exports[`#expand should expand simple 1`] = `
Array [
  Object {
    "dur": 960,
    "isRest": false,
    "next": 960,
    "time": 0,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "next": 1680,
    "time": 960,
  },
  Object {
    "dur": 1440,
    "isRest": false,
    "next": 3120,
    "time": 1680,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "next": 3840,
    "time": 3120,
  },
  Object {
    "dur": 960,
    "isRest": false,
    "next": 4800,
    "time": 3840,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "next": 5520,
    "time": 4800,
  },
  Object {
    "dur": 1440,
    "isRest": false,
    "next": 6960,
    "time": 5520,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "next": 7680,
    "time": 6960,
  },
]
`;
